data/collection/fixes/descriptions/scala/scala-7834
It seems likely that B.this.q.type should conform to B.super.q.type, given that either it is the same q, or the first was allowed to override the second.
```scala
scala> class S { val q = "" } ; class B extends S { val x: B.super.q.type = q }
<console>:7: error: type mismatch;
 found   : B.this.q.type (with underlying type String)
 required: B.super.q.type
       class S { val q = "" } ; class B extends S { val x: B.super.q.type = q }
                                                                            ^
```